--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
         <div class="level-0">
             <div class="page page-home">
                 <div class="page-title">🏠 HOME / OVERVIEW</div>
-                <div class="page-url"><a href="lakefront-live.html">lakefront-live</a></div>
+                <div class="page-url"><a href="lakefront-live.html" style="text-decoration: none; color: inherit;">lakefront-live</a></div>
                 <span class="badge badge-tier1">TIER 1 - Launch Day</span>
             </div>
         </div>
